<resources>
    <string name="app_name">EducationalApp</string>
    <string name="calculate_score">Calculate Score</string>
    <string name="_10000">10000</string>
    <string name="_5000">5000</string>
    <string name="_1000">1000</string>
    <string name="a_mischief">A Mischief</string>
    <string name="a_chaos">A Chaos</string>
    <string name="a_pack">A Pack</string>
    <string name="_1_what_animal_has_a_distinctive_scent_mark_that_smells_like_popcorn">1 - What animal has a distinctive scent mark that smells like popcorn ?</string>
    <string name="_2_how_many_types_of_flamingo_are_there">2 - How many types of flamingo are there?</string>
    <string name="_5_what_is_a_group_of_rats_called">5 - What is a group of rats called ?</string>
    <string name="_6_how_many_sri_lankan_leopards_are_there_left_in_the_wild">6 - How many Sri Lankan Leopards are there left in the wild ?</string>
    <string name="mammal">binturong</string>
    <string name="try_harder">\" Try Harder\"</string>
    <string name="you_did_it">\" You did IT!\"</string>
    <string name="good_job">\"Good Job you Scored \"</string>
    <string name="not_bad">\"Not bad you Scored \"</string>
    <string name="poor_score">\"Poor Score of \"</string>
    <string name="six">6</string>
    <string name="warningAtQ6">Kindly choose one of the answers at Q6</string>
    <string name="warningAtQ5">Kindly choose one of the answers at Q5</string>
    <string name="cheese_cake">Cheese Cake</string>
    <string name="select_deserts_from_the_following">Select deserts from the following</string>
    <string name="chocolate">Chocolate</string>
    <string name="soup">Soup</string>
    <string name="select_all_minerals">Select all minerals</string>
    <string name="gold">Gold</string>
    <string name="iron">Iron</string>
    <string name="wood">Wood</string>
    <string name="warningAtq4">Not all answers are selected or you answer is not correct at Q4</string>
    <string name="warningAtQ3">Not all answers are selected or you answer is not correct at Q3</string>
    <string name="warningAtQ2">Your Answer is not correct at Q2</string>
    <string name="warningAtQ1">Your answer is not correct at Q1</string>
    <string name="select_all_metals_from_following">Select all metals from following</string>
</resources>